# prismGL

./: .gitignore  CMakeLists.txt  Camera.h  EBO.cpp  EBO.h  First-OpenGL-Project.vcxproj  First-OpenGL-Project.vcxproj.filters  Main.cpp  README.md  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  default.vert  glad.c  oldCode.txt  shaderClass.cpp  shaderClass.h  stb.cpp
First-Op.72facfa0/x64/Debug/: First-OpenGL-Project.exe.recipe  First-OpenGL-Project.ilk  vc143.idb
First-Op.72facfa0/x64/Debug/First-Op.72facfa0.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  First-OpenGL-Project.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Libraries/lib/: glfw3.lib
include/: Camera.h  EBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h
libraries/glad/: glad.h
shaders/: default.frag  default_frag.h  default_vert.h
src/: Camera.cpp  EBO.cpp  Main.cpp  VAO.cpp  VBO.cpp  glad.c  main.old  shaderClass.cpp
vs-files/: First-OpenGL-Project.sln
